package com.luxuryproductsholding.api.models;

public enum DiscountType {
    PERCENTAGE,
    FIXED
}
