@startuml
' Promocode class and related classes

class Promocode {
  Long id
  String code
  boolean active
  LocalDateTime creationDate
  LocalDateTime expiryDate
  DiscountType discountType
  BigDecimal discountValue
  BigDecimal minimumOrderAmount
  Integer usedCount
  Integer maxUsesPerEmail
  Set<Product> applicableProducts
  Set<Category> applicableCategories
}

class Product {
  Long id
  String name
  String description
  BigDecimal price
  String imageUrl
  Category
}

class Category {
  Long id
  String name
  List<Product> products
}

enum DiscountType {
  PERCENTAGE
  FIXED_AMOUNT
}

class PromocodeController {
  <<create>>PromocodeController
  -promocodeService: PromocodeService
  ---
  +validatePromocode()
  +createPromocode()
}

class PromocodeService {
    <<create>>PromocodeService
    -promocodeRepository: PromocodeRepository
    -productRepository: ProductRepository
    -promocodeValidatorService: PromocodeValidatorService
    ---
    +validatePromocode(dto: PromocodeRequestDTO): PromocodeResponse
    +createPromocode(promocode: Promocode): Promocode
}

class PromocodeValidatorService {
    <<service>>
    -promocodeRepository: PromocodeRepository
    -productRepository: ProductRepository
    ---
    +validatePromocodeOnCreation(promocode: PromocodeRequestDTO)
    +validate(promocode: Promocode, order: Order, email: String): boolean
    +applyDiscount(promocode: Promocode, order: Order, email: String): BigDecimal
}

interface PromocodeRepository {
    <<Implements JPA Repository>>
    +findByCode(code: String): Optional<Promocode>
    +existsByCode(code: String): boolean
}

interface ProductRepository {
    <<Implements JPA Repository>>
    +findByName(name: String): Optional<Product>
    +existsByName(name: String): boolean
}

class PromocodeRequestDTO {
    String code
    String scopeType
    String scopeValue
    String discountType
    BigDecimal discountValue
    BigDecimal minOrderAmount
    Integer usedCount
    Integer maxUsesPerEmail
    LocalDateTime expiryDate
    LocalDateTime creationDate
}

class PromocodeResponse {
    BigDecimal discountValue
    boolean isValid
    String message
}

' Relationships
Promocode "0..*" -- "0..*" Product : applicableProducts
Promocode "0..*" -- "0..*" Category : applicableCategories
PromocodeController ..> PromocodeService
PromocodeService ..> Promocode
PromocodeService ..> PromocodeValidatorService
PromocodeService ..> PromocodeRepository
PromocodeService ..> ProductRepository
PromocodeValidatorService ..> PromocodeRepository
PromocodeValidatorService ..> ProductRepository
PromocodeService ..> PromocodeRequestDTO
PromocodeService ..> PromocodeResponse
PromocodeValidatorService ..> PromocodeRequestDTO

@enduml
